Increased the size of the welcome text by 0.25em (4px), and fixed navbar covering vertical scroll bar

--- a/frontend/src/components/navbar/Navbar.css
+++ b/frontend/src/components/navbar/Navbar.css
@@ -1,13 +1,18 @@
+
 .navbar {
-    background-color: #500000;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0.75rem 1.5rem;
-    width:100%;
-    position: fixed;
-    z-index:3;
-  }
+  position: fixed;
+  top: 0;
+  left: 0; 
+  right: 17px;
+  background-color: #500000;
+  display: flex;
+  align-items: center;  
+  justify-content: space-between;
+  padding: 0.75rem 1.5rem;
+  z-index: 2;
+}
+
+
   
 
   .logo img {
@@ -35,5 +40,5 @@
   }
   
   .navbar-links li a:hover {
-    color: #FFC;
+    color: #fcb532;
   }
